Fixed the scrollbar issue

--- a/regurg/static/style.css
+++ b/regurg/static/style.css
@@ -10,10 +10,6 @@ h2 {
     font-size: 1.2em;
 }
 
-.header {
-    margin-left: 30px;
-}
-
 .hash {
     color: #999999;
     font-style: italic;
